trunk/Archive2/d2/5a0f647f3c0b7f/output
main.cpp: In function 'int main()':
main.cpp:20:5: error: 'wwcout' is not a member of 'std'
     std::wwcout << words << std::endl;
     ^
